<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rgs_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="40dp"
        android:fontFamily="@font/jetbrains_mono_bold_italic"
        android:text="@string/app_name_textview"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="40dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_below="@+id/app_name_text"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/beer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/User_Name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/rgs_your_name"
        app:helperText="Required*"
        app:helperTextTextColor="@color/beer"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/real_user_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/User_Name"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/edt_email"
        android:layout_marginTop="20dp"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:helperTextTextColor="@color/beer"
        app:startIconDrawable="@android:drawable/sym_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_email"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/edt_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText="Required*"
        app:helperTextTextColor="@color/beer"
        app:startIconDrawable="@android:drawable/ic_lock_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/register_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_below="@+id/edt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/rgs_sign_up"
        android:textSize="18dp" />

</RelativeLayout>





    <!--    <EditText-->
    <!--        android:id="@+id/edt_password"-->
    <!--        android:background="@drawable/edt_background"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="40dp"-->
    <!--        android:layout_below="@+id/edt_email"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:hint="@string/edt_password"-->
    <!--        android:paddingStart="12dp"-->
    <!--        android:layout_marginLeft="20dp"-->
    <!--        android:layout_marginRight="20dp"-->
    <!--        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"/>-->
    <!--         />-->
    <!--    <EditText-->
    <!--        android:id="@+id/edt_email"-->
    <!--        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="40dp"-->
    <!--        android:layout_below="@+id/app_logo"-->
    <!--        android:layout_marginLeft="20dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_marginRight="20dp"-->
    <!--        android:background="@drawable/edt_background"-->
    <!--        android:hint="@string/edt_email"-->
    <!--        android:inputType="textEmailAddress"-->
    <!--        android:paddingStart="12dp" />-->